<resources>
    <string name="app_name">PROYECTO_FINAL</string>
    <string name="text_titulo">Login</string>
    <string name="text_usuario">Usuario</string>
    <string name="text_clave">Clave</string>
    <string name="button_ingreso">Ingreso</string>
    <string name="button_registro">Registro</string>
    <string name="text_placa">Placa</string>
    <string name="text_marca">Marca</string>
    <string name="text_fecha">Fecha de Fabricacion:</string>
    <string name="text_costo">Costo</string>
    <string name="text_matriculado">Matriculado</string>
    <string name="text_color">Color</string>
    <string name="text_vehiculos">Listado de los Vehiculos disponibles</string>
    <string name="edit_placa">Placa</string>
    <string name="edit_marca">Marca</string>
    <string name="edit_fecha">Fecha de Fabricacion:</string>
    <string name="edit_costo">Costo</string>
    <string name="edit_matriculado">Matriculado</string>
    <string name="edit_color">Color</string>

</resources>
