<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VehiculoRegistroActivity">

    <EditText
        android:id="@+id/txtPlaca"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="195dp"
        android:layout_marginBottom="24dp"
        android:ems="10"
        android:hint="@string/text_placa"
        android:inputType="textPersonName"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/txtMarca"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtMarca"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="195dp"
        android:layout_marginBottom="15dp"
        android:ems="10"
        android:hint="@string/text_marca"
        android:inputType="textPersonName"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/txtCosto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPlaca" />

    <EditText
        android:id="@+id/txtCosto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="195dp"
        android:layout_marginBottom="24dp"
        android:ems="10"
        android:hint="@string/text_costo"
        android:inputType="numberDecimal"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/swMatricula"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtMarca" />

    <Switch
        android:id="@+id/swMatricula"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="244dp"
        android:layout_marginBottom="12dp"
        android:text="Matriculado"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtCosto" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="103dp"
        android:text="@string/text_color"
        app:layout_constraintBottom_toTopOf="@+id/txtFecha"
        app:layout_constraintEnd_toStartOf="@+id/radioGroup"
        app:layout_constraintHorizontal_bias="0.357"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/swMatricula"
        app:layout_constraintVertical_bias="1.0" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="56dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/spFecha"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/swMatricula">

        <RadioButton
            android:id="@+id/rbtPlomo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Plomo" />

        <RadioButton
            android:id="@+id/rbtCeleste"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Celeste" />

        <RadioButton
            android:id="@+id/rbtVerde"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Verde" />

        <RadioButton
            android:id="@+id/rbtRojo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Rojo" />
    </RadioGroup>

    <DatePicker
        android:id="@+id/spFecha"
        android:layout_width="242dp"
        android:layout_height="94dp"

        android:layout_marginStart="8dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="52dp"
        android:calendarViewShown="false"
        android:datePickerMode="spinner"
        android:onClick="showDatePicker"
        android:spinnersShown="true"
        android:text="Pick Date"
        app:layout_constraintBottom_toTopOf="@+id/btnRegistro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txtFecha"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <Button
        android:id="@+id/btnRegistro"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="140dp"
        android:layout_marginTop="48dp"
        android:text="Registrar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtFecha" />

    <TextView
        android:id="@+id/txtFecha"
        android:layout_width="121dp"
        android:layout_height="19dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="3dp"
        android:layout_marginBottom="124dp"
        android:text="Seleccionar Fecha"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/spFecha"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>